@@ -3,6 +3,7 @@ v4.4
 + Adds "X games with drops remaining" to badge page
 + Adds foil badge progress link to non-foil badge progress page
 : Fixes a bug where foil badges were linking to non-foil market pages
+: Better uPlay and GFWL DRM detection on app pages
 
 v4.3
 -----
